--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>로또 6개 번호 추첨기</title>
+    <title>로또 6개 번호 5세트 추첨기</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>로또 6개 번호 추첨기</h1>
-        <p class="lotto-hint">한 번에 6개의 번호가 추첨됩니다.</p>
+        <h1>로또 6개 번호 5세트 추첨기</h1>
+        <p class="lotto-hint">한 번에 5세트(각 6개 번호)가 추첨됩니다.</p>
         <div class="lotto-numbers">
         </div>
         <button id="generate-btn">번호 추첨하기</button>
