Add Formspree redirect thank-you page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <h2>제휴 문의</h2>
             <p class="form-hint">간단한 정보를 남겨주시면 빠르게 연락드리겠습니다.</p>
             <form class="contact-form" action="https://formspree.io/f/xykkyler" method="POST">
+                <input type="hidden" name="_redirect" value="thank-you.html">
                 <label>
                     이름
                     <input type="text" name="name" required>
