Revert "Improve SEO metadata and add sitemap/rss"
This reverts commit ea979944825db92c4055839fa7daaff342b7604e.

--- a/thank-you.html
+++ b/thank-you.html
@@ -3,14 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>제휴 문의 접수 완료 | 동물상 테스트</title>
-    <meta name="description" content="동물상 테스트 제휴 문의가 접수되었습니다. 빠른 확인 후 연락드리겠습니다.">
-    <meta name="robots" content="noindex,nofollow">
-    <link rel="canonical" href="https://dreamzone.pages.dev/">
-    <meta property="og:title" content="제휴 문의 접수 완료 | 동물상 테스트">
-    <meta property="og:description" content="동물상 테스트 제휴 문의가 접수되었습니다.">
-    <meta property="og:locale" content="ko_KR">
-    <meta name="twitter:card" content="summary">
+    <title>제휴 문의 접수 완료</title>
     <link rel="stylesheet" href="style.css">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GQ7H4CHS3N"></script>
@@ -30,24 +23,10 @@
     </script>
 </head>
 <body>
-    <main class="container">
+    <div class="container">
         <h1>제휴 문의가 접수되었습니다</h1>
         <p class="lotto-hint">확인 후 빠르게 연락드리겠습니다.</p>
         <a id="generate-btn" href="index.html">홈으로 돌아가기</a>
-    </main>
-
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "WebPage",
-            "name": "제휴 문의 접수 완료",
-            "description": "동물상 테스트 제휴 문의가 접수되었습니다.",
-            "inLanguage": "ko-KR",
-            "isPartOf": {
-                "@type": "WebSite",
-                "name": "동물상 테스트"
-            }
-        }
-    </script>
+    </div>
 </body>
 </html>
