--- a/index.html
+++ b/index.html
@@ -3,26 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>동물상 테스트 | 강아지상 vs 고양이상 무료 얼굴 분석</title>
-    <meta name="description" content="사진을 업로드하면 AI가 강아지상과 고양이상 중 어떤 인상에 가까운지 알려주는 동물상 테스트입니다. 결과는 브라우저에서만 처리되어 개인정보가 안전합니다.">
-    <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
-    <link rel="canonical" href="https://dreamzone.pages.dev/">
-    <meta property="og:title" content="동물상 테스트 | 강아지상 vs 고양이상">
-    <meta property="og:description" content="사진을 올리면 강아지상/고양이상 중 어디에 가까운지 알려주는 무료 이미지 테스트. 개인정보는 브라우저 안에서만 처리됩니다.">
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="ko_KR">
-    <meta property="og:site_name" content="DreamZone">
-    <meta property="og:url" content="https://dreamzone.pages.dev/">
-    <meta property="og:image" content="https://dreamzone.pages.dev/lotto-preview.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="동물상 테스트 | 강아지상 vs 고양이상">
-    <meta name="twitter:description" content="업로드한 사진을 기반으로 동물상 유형을 빠르게 알려주는 무료 테스트입니다.">
-    <meta name="twitter:image" content="https://dreamzone.pages.dev/lotto-preview.png">
+    <title>동물상 테스트 | 강아지상 vs 고양이상</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Manrope:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="alternate" type="application/rss+xml" title="동물상 테스트 RSS" href="https://dreamzone.pages.dev/rss.xml">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GQ7H4CHS3N"></script>
     <script>
@@ -48,159 +33,48 @@
             <p class="subtitle">사진을 업로드하면 강아지상과 고양이상 중 어디에 가까운지 알려줘요.</p>
             <div class="cta-row">
                 <label class="upload-btn" for="image-input">사진 선택</label>
-                <input type="file" id="image-input" class="file-input" accept="image/*" aria-describedby="upload-help status">
+                <input type="file" id="image-input" class="file-input" accept="image/*">
                 <button type="button" id="reset-btn">초기화</button>
             </div>
-            <p class="helper-text" id="upload-help">정면이 잘 나온 사진을 선택하면 더 정확하게 분석할 수 있어요.</p>
-            <div class="status" id="status" role="status" aria-live="polite">사진을 올리면 바로 분석합니다.</div>
+            <div class="status" id="status">사진을 올리면 바로 분석합니다.</div>
         </header>
 
-        <main>
-            <section class="test-grid" aria-labelledby="test-heading">
-                <h2 class="section-title" id="test-heading">사진으로 바로 시작하는 동물상 테스트</h2>
-                <div class="card camera-card">
-                    <div class="card-header">업로드 이미지</div>
-                    <div id="image-container" class="webcam-box">
-                        <div class="placeholder">이미지를 업로드해주세요</div>
-                    </div>
-                    <p class="hint">정면이 잘 나온 사진일수록 결과가 정확해집니다.</p>
+        <section class="test-grid">
+            <div class="card camera-card">
+                <div class="card-header">업로드 이미지</div>
+                <div id="image-container" class="webcam-box">
+                    <div class="placeholder">이미지를 업로드해주세요</div>
                 </div>
-                <div class="card result-card">
-                    <div class="card-header">분석 결과</div>
-                    <div class="result-main">
-                        <div class="result-title" id="top-result">아직 분석 전</div>
-                        <div class="result-score" id="top-score">--%</div>
-                    </div>
-                    <div id="label-container" class="label-list"></div>
-                    <p class="result-note">결과는 재미로만 참고해주세요.</p>
-                </div>
-            </section>
-
-            <section class="tips" aria-labelledby="tip-heading">
-                <h2 class="section-title" id="tip-heading">동물상 테스트가 신뢰받는 이유</h2>
-                <div class="tip">
-                    <h3>손쉬운 시작</h3>
-                    <p>사진을 올리면 모델을 불러오고 자동으로 분석합니다.</p>
-                </div>
-                <div class="tip">
-                    <h3>실시간 반영</h3>
-                    <p>다른 사진을 올리면 퍼센트가 즉시 업데이트됩니다.</p>
-                </div>
-                <div class="tip">
-                    <h3>개인정보 보호</h3>
-                    <p>이미지는 브라우저 안에서만 처리되며 서버로 전송되지 않습니다.</p>
-                </div>
-            </section>
-
-            <section class="seo-section" aria-labelledby="about-heading">
-                <h2 class="section-title" id="about-heading">동물상 테스트란?</h2>
-                <p>동물상 테스트는 업로드한 얼굴 사진을 기반으로 강아지상과 고양이상 중 어떤 인상에 가까운지 알려주는 AI 이미지 분석입니다. 별도의 회원가입 없이 바로 사용할 수 있으며, 결과는 화면에 즉시 표시됩니다.</p>
-                <p>이 페이지는 가벼운 재미를 위한 테스트로, 결과는 참고용으로만 확인해주세요. 데이터는 로컬에서 처리되어 개인정보 보호에도 신경 썼습니다.</p>
-            </section>
-
-            <section class="seo-section" aria-labelledby="howto-heading">
-                <h2 class="section-title" id="howto-heading">이용 방법</h2>
-                <ol class="steps">
-                    <li>정면이 잘 나온 얼굴 사진을 준비합니다.</li>
-                    <li>상단의 “사진 선택” 버튼을 눌러 이미지를 업로드합니다.</li>
-                    <li>분석 결과로 강아지상/고양이상 비율을 확인합니다.</li>
-                </ol>
-            </section>
-
-            <section class="seo-section faq" aria-labelledby="faq-heading">
-                <h2 class="section-title" id="faq-heading">자주 묻는 질문</h2>
-                <div class="faq-item">
-                    <h3>사진은 서버로 전송되나요?</h3>
-                    <p>아니요. 이미지는 브라우저에서만 처리되고 외부 서버로 전송되지 않습니다.</p>
-                </div>
-                <div class="faq-item">
-                    <h3>정확도를 높이려면 어떻게 해야 하나요?</h3>
-                    <p>조명이 밝고 정면이 뚜렷한 사진을 업로드하면 인식이 더 안정적입니다.</p>
-                </div>
-                <div class="faq-item">
-                    <h3>모바일에서도 사용할 수 있나요?</h3>
-                    <p>네. 모바일과 데스크톱 모두에서 사용할 수 있도록 반응형으로 제작되었습니다.</p>
-                </div>
-            </section>
-        </main>
-
-        <footer class="footer">
-            <div class="footer-links">
-                <a href="index.html">동물상 테스트 홈</a>
-                <a href="thank-you.html">제휴 문의</a>
+                <p class="hint">정면이 잘 나온 사진일수록 결과가 정확해집니다.</p>
             </div>
-            <div>모델 경로: <span class="mono">./my_model/</span></div>
-        </footer>
+            <div class="card result-card">
+                <div class="card-header">분석 결과</div>
+                <div class="result-main">
+                    <div class="result-title" id="top-result">아직 분석 전</div>
+                    <div class="result-score" id="top-score">--%</div>
+                </div>
+                <div id="label-container" class="label-list"></div>
+                <p class="result-note">결과는 재미로만 참고해주세요.</p>
+            </div>
+        </section>
+
+        <section class="tips">
+            <div class="tip">
+                <h3>손쉬운 시작</h3>
+                <p>사진을 올리면 모델을 불러오고 자동으로 분석합니다.</p>
+            </div>
+            <div class="tip">
+                <h3>실시간 반영</h3>
+                <p>다른 사진을 올리면 퍼센트가 즉시 업데이트됩니다.</p>
+            </div>
+            <div class="tip">
+                <h3>개인정보 보호</h3>
+                <p>영상은 브라우저 안에서만 처리되며 서버로 전송되지 않습니다.</p>
+            </div>
+        </section>
+
+        <footer class="footer">모델 경로: <span class="mono">./my_model/</span></footer>
     </div>
-
-    <noscript>
-        <div class="noscript">이 사이트는 자바스크립트가 필요합니다. 브라우저에서 자바스크립트를 활성화해주세요.</div>
-    </noscript>
-
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "WebPage",
-            "name": "DreamZone",
-            "description": "사진을 업로드하면 강아지상과 고양이상 중 어떤 인상에 가까운지 알려주는 무료 이미지 테스트.",
-            "inLanguage": "ko-KR",
-            "url": "https://dreamzone.pages.dev/",
-            "isPartOf": {
-                "@type": "WebSite",
-                "name": "DreamZone",
-                "url": "https://dreamzone.pages.dev/"
-            },
-            "publisher": {
-                "@type": "Organization",
-                "name": "DreamZone"
-            }
-        }
-    </script>
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "WebSite",
-            "name": "DreamZone",
-            "url": "https://dreamzone.pages.dev/",
-            "inLanguage": "ko-KR",
-            "publisher": {
-                "@type": "Organization",
-                "name": "DreamZone"
-            }
-        }
-    </script>
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "FAQPage",
-            "mainEntity": [
-                {
-                    "@type": "Question",
-                    "name": "사진은 서버로 전송되나요?",
-                    "acceptedAnswer": {
-                        "@type": "Answer",
-                        "text": "아니요. 이미지는 브라우저에서만 처리되고 외부 서버로 전송되지 않습니다."
-                    }
-                },
-                {
-                    "@type": "Question",
-                    "name": "정확도를 높이려면 어떻게 해야 하나요?",
-                    "acceptedAnswer": {
-                        "@type": "Answer",
-                        "text": "조명이 밝고 정면이 뚜렷한 사진을 업로드하면 인식이 더 안정적입니다."
-                    }
-                },
-                {
-                    "@type": "Question",
-                    "name": "모바일에서도 사용할 수 있나요?",
-                    "acceptedAnswer": {
-                        "@type": "Answer",
-                        "text": "네. 모바일과 데스크톱 모두에서 사용할 수 있도록 반응형으로 제작되었습니다."
-                    }
-                }
-            ]
-        }
-    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
